pref: 删除优化